# cmake-portable-endian

./: .gitignore  CMakeLists.txt  README.md  endianness_config.h.in
test/: cmake_aatobbnn_test.c  cmake_atobl_test.c  cmake_atobll_test.c  cmake_atobs_test.c  cmake_builtin_bswap_test.c  cmake_endian_test.c  cmake_printf_zu_test.c  printf_types.h  simple_test.c
